fixed, /usr/local... does not exist on virgin OSX boxes
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31150 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/librtmp/Makefile
+++ b/lib/librtmp/Makefile
@@ -48,11 +48,12 @@ librtmp/Makefile:
 	svn export --revision $(RTMPDUMP_VERS) svn://svn.mplayerhq.hu/rtmpdump/trunk/librtmp librtmp
 
 install:
+	mkdir -p /usr/local/lib
 	mkdir -p /usr/local/include/librtmp
 	cp -f librtmp/amf.h /usr/local/include/librtmp
 	cp -f librtmp/log.h /usr/local/include/librtmp
 	cp -f librtmp/rtmp.h /usr/local/include/librtmp
-	cp -f librtmp.so /usr/local/lib
+	cp -f librtmp.so /usr/local/lib/
 
 clean:
 	rm -f librtmp.so
