rev up to 2.2f (svn r511)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31152 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/librtmp/Makefile
+++ b/lib/librtmp/Makefile
@@ -15,7 +15,8 @@
 #    make
 #    sudo make install
 
-RTMPDUMP_VERS = 509
+# librtmp 2.2f is this svn version
+RTMPDUMP_VERS = 511
 # get OS type from shell
 OSTYPE	= $(shell uname)
 
