fixed, broken make build on osx, can't use $ (sort @LIBS@), it removes the -framework flags
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31157 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/Makefile.in
+++ b/Makefile.in
@@ -125,7 +125,7 @@ SKIN_DIRS=\
 DIRS= $(BIN_DIRS) $(EC_DIRS) $(XBMCTEX_DIRS) $(DVDPCODECS_DIRS) $(PAPCODECS_DIRS) \
 	$(LIB_DIRS) $(SS_DIRS) $(VIS_DIRS) $(SKIN_DIRS)
 
-LIBS=$(sort @LIBS@)
+LIBS=@LIBS@
 CFLAGS=@CFLAGS@
 CXXFLAGS=@CXXFLAGS@
 LDFLAGS=@LDFLAGS@
