changed, use curl of fetching on OSX, wget is not native
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31184 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/libvpx/Makefile
+++ b/lib/libvpx/Makefile
@@ -10,7 +10,7 @@
 #  Usage:
 #    make
 
-LIBVPX_VERS="0.9.1"
+LIBVPX_VERS= 0.9.1
 LIBVPX_SRC = libvpx-$(LIBVPX_VERS)
 LIBVPX_LIB = $(LIBVPX_SRC)/libvpx.a
 
@@ -19,6 +19,9 @@ OSTYPE	= $(shell uname)
 ifeq ($(OSTYPE),Darwin)
 PREFIX = --prefix=/opt/local
 TARGET = --target=x86-darwin8-gcc
+DOWNLOAD_SRC = curl --output $(LIBVPX_SRC).tar.bz2 http://webm.googlecode.com/files/$(LIBVPX_SRC).tar.bz2
+else
+DOWNLOAD_SRC = wget http://webm.googlecode.com/files/$(LIBVPX_SRC).tar.bz2
 endif
 
 all:: $(LIBVPX_LIB)
@@ -27,7 +30,7 @@ $(LIBVPX_LIB): $(LIBVPX_SRC)/Makefile
 	make -C $(LIBVPX_SRC)
 
 $(LIBVPX_SRC)/Makefile:
-	wget http://webm.googlecode.com/files/$(LIBVPX_SRC).tar.bz2
+	$(DOWNLOAD_SRC)
 	tar -xjf $(LIBVPX_SRC).tar.bz2
 	cd $(LIBVPX_SRC); ./configure $(PREFIX) $(TARGET) --disable-examples --enable-vp8
 
