[osx] fixed, libvpx usage by internal FFmpeg
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31185 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/configure.in
+++ b/configure.in
@@ -1530,6 +1530,7 @@ XB_CONFIG_MODULE([xbmc/cores/dvdplayer/Codecs/ffmpeg], [
   if test "$host_vendor" = "apple" ; then
     ./configure \
       --extra-cflags="$CFLAGS -w -D_DARWIN_C_SOURCE -Dattribute_deprecated=" \
+      `if test "$use_vpx" = "yes"; then echo --extra-ldflags="-L/opt/local/lib"; fi` \
       --disable-amd3dnow \
       --disable-static \
       `if test "$use_debug" = "no"; then echo --disable-debug; fi` \
