[osx] fixed, need path to libvpx if enabled
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31187 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/cores/dvdplayer/Codecs/Makefile.in
+++ b/xbmc/cores/dvdplayer/Codecs/Makefile.in
@@ -52,6 +52,9 @@ endif
 
 VPXLIB=
 ifeq (@USE_VPX@,1)
+ifeq ($(findstring osx,$(ARCH)),osx)
+VPXLIB+=-L/opt/local/lib
+endif
 VPXLIB+=-lvpx
 endif
 
