--- a/tools/depends/configure.ac
+++ b/tools/depends/configure.ac
@@ -309,10 +309,12 @@ case $host in
             AC_MSG_ERROR(error in configure of --with-sdk=$use_sdk)
         esac
         sdk_name=macosx$use_sdk
-        platform_min_version="macosx-version-min=10.9"
 
         use_sdk_path=[`$use_xcodebuild -version -sdk $sdk_name Path`]
         platform_os="osx"
+        platform_min=10.9
+        platform_min_version=macosx-version-min=$platform_min
+
       ;;
 
       arm-apple-darwin*)
@@ -373,8 +375,8 @@ case $host in
     platform_cflags+=" -arch $use_cpu -m$platform_min_version"
     platform_ldflags+=" -arch $use_cpu -m$platform_min_version -isysroot $use_sdk_path -stdlib=libc++"
     platform_cxxflags+=" -arch $use_cpu -m$platform_min_version -std=c++11 -stdlib=libc++"
-    platform_includes="-isysroot $use_sdk_path"
     deps_dir="${sdk_name}_${use_cpu}-target-${build_type}"
+    platform_includes="-isysroot $use_sdk_path -F$prefix/$deps_dir/Frameworks"
     AC_CHECK_LIB([z], [main], has_zlib=1, AC_MSG_WARN("No zlib support in toolchain. Will build libz."); has_zlib=0)
   ;;
   *)
@@ -673,6 +675,8 @@ AC_SUBST(use_ccache)
 AC_SUBST(native_platform_min_version)
 AC_SUBST(app_rendersystem)
 AC_SUBST(ffmpeg_options)
+AC_SUBST(platform_min)
+AC_SUBST(sdk_name)
 
 AC_OUTPUT
 
