[win32] - add the needed bits for supporting updatehandler on windows desktop

--- a/xbmc/platform/win32/CMakeLists.txt
+++ b/xbmc/platform/win32/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES CharsetConverter.cpp
             dxerr.cpp
             Filesystem.cpp
             pch.cpp
+            UpdaterWindows.cpp
             WIN32Util.cpp
             WindowHelper.cpp)
 
@@ -18,6 +19,7 @@ set(HEADERS CharsetConverter.h
             PlatformDefs.h
             resource.h
             unistd.h
+            UpdaterWindows.h
             WIN32Util.h
             WindowHelper.h)
 
