utils/Screenshot: rework and split up

--- a/xbmc/utils/CMakeLists.txt
+++ b/xbmc/utils/CMakeLists.txt
@@ -113,6 +113,7 @@ set(HEADERS ActorProtocol.h
             ILocalizer.h
             InfoLoader.h
             IRssObserver.h
+            IScreenshotSurface.h
             ISerializable.h
             ISortable.h
             IXmlDeserializable.h
