Remove amlogic platform
Amlogic developers are encouraged to move to the GBM platform

--- a/tools/depends/native/Makefile
+++ b/tools/depends/native/Makefile
@@ -22,7 +22,7 @@ ifeq ($(OS),osx)
 endif
 
 ifeq ($(OS),linux)
-  ifeq ($(TARGET_PLATFORM),$(filter $(TARGET_PLATFORM),raspberry-pi aml gbm))
+  ifeq ($(TARGET_PLATFORM),$(filter $(TARGET_PLATFORM),raspberry-pi gbm))
     NATIVE += meson ninja python3
   endif
 endif
