--- a/xbmc/settings/windows/CMakeLists.txt
+++ b/xbmc/settings/windows/CMakeLists.txt
@@ -1,11 +1,13 @@
 set(SOURCES GUIControlSettings.cpp
             GUIWindowSettings.cpp
             GUIWindowSettingsCategory.cpp
-            GUIWindowSettingsScreenCalibration.cpp)
+            GUIWindowSettingsScreenCalibration.cpp
+            GUIWindowTestPattern.cpp)
 
 set(HEADERS GUIControlSettings.h
             GUIWindowSettings.h
             GUIWindowSettingsCategory.h
-            GUIWindowSettingsScreenCalibration.h)
+            GUIWindowSettingsScreenCalibration.h
+            GUIWindowTestPattern.h)
 
 core_add_library(settings_windows)
