--- a/xbmc/platform/win10/filesystem/CMakeLists.txt
+++ b/xbmc/platform/win10/filesystem/CMakeLists.txt
@@ -1,7 +1,11 @@
-set(SOURCES WinLibraryDirectory.cpp
+set(SOURCES UwpSMBDirectory.cpp
+            UwpSMBFile.cpp
+            WinLibraryDirectory.cpp
             WinLibraryFile.cpp)
 
-set(HEADERS WinLibraryDirectory.h
+set(HEADERS UwpSMBDirectory.h
+            UwpSMBFile.h
+            WinLibraryDirectory.h
             WinLibraryFile.h)
 
 core_add_library(platform_win10_filesystem)
