Add request for READ_EXTERNAL_STORAGE
This should allow the app to be granted both READ_EXTERNAL_STORAGE *and* WRITE_EXTERNAL_STORAGE permissions, hopefully solving the issue of Kodi not being able to install other *.apk* files, like in the official Kodi Android Installer add-on.

--- a/tools/android/packaging/xbmc/src/Splash.java.in
+++ b/tools/android/packaging/xbmc/src/Splash.java.in
@@ -137,7 +137,7 @@ public class Splash extends Activity
           mSplash.mTextView.setText("Asking for permissions...");
           mSplash.mProgress.setVisibility(View.INVISIBLE);
 
-          requestPermissions(new String[]{Manifest.permission.WRITE_EXTERNAL_STORAGE},
+          requestPermissions(new String[]{Manifest.permission.WRITE_EXTERNAL_STORAGE, Manifest.permission.READ_EXTERNAL_STORAGE},
                     PERMISSION_RESULT_CODE);
           break;
         case CheckingPermissionsDone:
