create a dedicated Headless WinSystem which does nothing and avoid rendering - working only on linux X11 or GBM Change has been extend to other builds but not tested (not to break compilation)

--- a/xbmc/windowing/CMakeLists.txt
+++ b/xbmc/windowing/CMakeLists.txt
@@ -1,13 +1,15 @@
 set(SOURCES GraphicContext.cpp
             OSScreenSaver.cpp
             Resolution.cpp
-            WinSystem.cpp)
+            WinSystem.cpp
+            WinSystemHeadless.cpp)
 
 set(HEADERS GraphicContext.h
             OSScreenSaver.h
             Resolution.h
             WinEvents.h
             WinSystem.h
+            WinSystemHeadless.h
             XBMC_events.h
             VideoSync.h)
 
