[ios/networking] - removed old ios stuff from NetworkLinux and hook up new ios network implementation into core

--- a/xbmc/platform/darwin/osx/network/CMakeLists.txt
+++ b/xbmc/platform/darwin/osx/network/CMakeLists.txt
@@ -1,8 +1,7 @@
 set(SOURCES ZeroconfBrowserOSX.cpp
             ZeroconfOSX.cpp)
 
-set(HEADERS ioshacks.h
-            ZeroconfBrowserOSX.h
+set(HEADERS ZeroconfBrowserOSX.h
             ZeroconfOSX.h)
 
 core_add_library(platform_osx_network)
