[tvOS] configure.ac

--- a/tools/depends/configure.ac
+++ b/tools/depends/configure.ac
@@ -320,6 +320,8 @@ case $host in
         MC_CHECK_NOT_CPU([$use_cpu], "*86")
 
         # setup which sdk to use
+
+        # If tvOS
         if test "$use_platform" = "tvos"; then
           # setup which cpu to use
           if test "x$use_cpu" = "xauto"; then
@@ -327,13 +329,25 @@ case $host in
           fi
 
           target_platform=appletvos
+          platform_os="tvos"
 
           found_sdk_version=[`$use_xcodebuild -showsdks | grep $target_platform | sort | tail -n 1 | awk '{ print $2}'`]
           use_sdk="${use_sdk:-$found_sdk_version}"
           platform_cflags+=" -fembed-bitcode"
           platform_cxxflags+=" -fembed-bitcode"
           sdk_name=$target_platform$use_sdk
-          platform_min_version="$target_platform-version-min=9.0"
+          platform_min_version="$target_platform-version-min=11.0"
+
+          # using a version earlier than 11.0 won't work on Xcode 9
+          case $use_sdk in
+            11.*);;
+            12.*);;
+            *)
+              AC_MSG_ERROR(error in configure of --with-sdk=$use_sdk)
+              ;;
+          esac
+
+        # If not tvOS (= iOS)
         else
           # setup which cpu to use
           if test "x$use_cpu" = "xauto"; then
@@ -341,24 +355,27 @@ case $host in
           fi
 
           target_platform=iphoneos
+          platform_os="ios"
 
           found_sdk_version=[`$use_xcodebuild -showsdks | grep $target_platform | sort | tail -n 1 | awk '{ print $2}'`]
           use_sdk="${use_sdk:-$found_sdk_version}"
           sdk_name=$target_platform$use_sdk
           platform_min_version="$target_platform-version-min=9.0"
-        fi
-        case $use_sdk in
-          9.*);;
-          10.*);;
-          11.*);;
-          12.*);;
+
+          case $use_sdk in
+            9.*);;
+            10.*);;
+            11.*);;
+            12.*);;
             *)
               AC_MSG_ERROR(error in configure of --with-sdk=$use_sdk)
-            ;;
-        esac
+              ;;
+          esac
 
-        platform_os="ios"
+        fi
 
+
+        # Common to tvos and ios?
         if [ ! test "x$use_cpu" = "xarm64" ]; then
           platform_cflags+=" -mcpu=cortex-a8 -mfpu=neon"
           platform_ldflags+=" -Wl,-segalign,4000"
@@ -372,6 +389,8 @@ case $host in
         platform_cxxflags+=" $cpu_flags"
       ;;
     esac
+
+
     platform_cflags+=" -arch $use_cpu -m$platform_min_version"
     platform_ldflags+=" -arch $use_cpu -m$platform_min_version -isysroot $use_sdk_path -stdlib=libc++"
     platform_cxxflags+=" -arch $use_cpu -m$platform_min_version -stdlib=libc++"
@@ -419,6 +438,8 @@ case $use_platform in
      platform_cxxflags="-fPIC -mcpu=cortex-a53 -mfloat-abi=hard -mfpu=neon-fp-armv8 -mvectorize-with-neon-quad"
      platform_ldflags="-lpthread"
      ;;
+  tvos)
+    ;;
   auto)
     ;;
   *)
@@ -556,13 +577,13 @@ if test "$platform_os" == "android"; then
 fi
 
 # darwin needs unzip/zip in Codesign.command
-if test "$platform_os" = "android" || test "$platform_os" = "osx" || test "$platform_os" = "ios"; then
+if test "$platform_os" = "android" || test "$platform_os" = "osx" || test "$platform_os" = "ios" || test "$platform_os" = "tvos"; then
   AC_CHECK_PROG(HAVE_UNZIP,unzip,"yes","no",)
   if test "x$HAVE_UNZIP" = "xno"; then
     AC_MSG_ERROR("Missing program: unzip")
   fi
 fi
-if test "$platform_os" = "osx" || test "$platform_os" = "ios"; then
+if test "$platform_os" = "osx" || test "$platform_os" = "ios" || test "$platform_os" = "tvos"; then
   AC_CHECK_PROG(HAVE_ZIP,zip,"yes","no",)
   if test "x$HAVE_ZIP" = "xno"; then
     AC_MSG_ERROR("Missing program: zip")
@@ -609,7 +630,7 @@ tmp_cxxflags=$(echo $cxx11_flags $platform_cxxflags | sed 's/-O@<:@123@:>@//g;s/
 release_cflags="-DNDEBUG=1"
 
 # newer xcode version accept -Og flag, but debugging doesn't work with it
-if test "$platform_os" = "osx" || test "$platform_os" = "ios"; then
+if test "$platform_os" = "osx" || test "$platform_os" = "ios" || test "$platform_os" = "tvos"; then
   debug_cflags="-g -D_DEBUG"
 else
   CFLAGS="$tmp_cflags -Og -g -D_DEBUG"
@@ -679,13 +700,15 @@ AC_SUBST(ffmpeg_options)
 AC_OUTPUT
 
 if test "$platform_os" == "ios"; then
-  if test "$use_platform" = "tvos"; then
-    simulator_sdk_path=[`$use_xcodebuild -version -sdk appletvsimulator$use_sdk  | grep ^Path | awk '{ print $2}'`]
-  else
-    simulator_sdk_path=[`$use_xcodebuild -version -sdk iphonesimulator$use_sdk  | grep ^Path | awk '{ print $2}'`]
-  fi
+  simulator_sdk_path=[`$use_xcodebuild -version -sdk iphonesimulator$use_sdk  | grep ^Path | awk '{ print $2}'`]
   cp -vf $simulator_sdk_path/usr/include/crt_externs.h $prefix/$deps_dir/include
 fi
+
+if test "$platform_os" == "tvos"; then
+  simulator_sdk_path=[`$use_xcodebuild -version -sdk appletvsimulator$use_sdk  | grep ^Path | awk '{ print $2}'`]
+  cp -vf $simulator_sdk_path/usr/include/crt_externs.h $prefix/$deps_dir/include
+fi
+
 echo -e "use simulator:\t $use_simulator"
 
 if test "x$has_localeconv" == "xno" && test "$platform_os" == "android"; then
