[tvOS] WIP Kodi core

--- a/xbmc/windowing/osx/CMakeLists.txt
+++ b/xbmc/windowing/osx/CMakeLists.txt
@@ -22,4 +22,11 @@ if(CORE_SYSTEM_NAME STREQUAL ios)
               VideoSyncIos.h)
 endif()
 
+if(CORE_SYSTEM_NAME STREQUAL tvos)
+  set(SOURCES WinEventsTVOS.mm
+              WinSystemTVOS.mm)
+  set(HEADERS WinEventsTVOS.h
+              WinSystemTVOS.h)
+endif()
+
 core_add_library(windowing_osx)
