[depends] bump dpkg to 1.19.6
- darwin doesn't have gnu patch
- darwin perl version is 5.18.2
- dpkg-deb on ios (jailbreak) can't handle xz compression and gzip compression is bad, therfore allow using lzma compression

--- a/tools/darwin/packaging/ios/mkdeb-ios.sh.in
+++ b/tools/darwin/packaging/ios/mkdeb-ios.sh.in
@@ -133,7 +133,7 @@ echo Packaging $PACKAGE
 export COPYFILE_DISABLE=true
 export COPY_EXTENDED_ATTRIBUTES_DISABLE=true
 #
-${SUDO} dpkg-deb -bZ lzma $DIRNAME/$PACKAGE $DIRNAME/$ARCHIVE
+${SUDO} dpkg-deb -bZ lzma --no-uniform-compression $DIRNAME/$PACKAGE $DIRNAME/$ARCHIVE
 ${SUDO} chown 501:20 $DIRNAME/$ARCHIVE
 dpkg-deb --info $DIRNAME/$ARCHIVE
 dpkg-deb --contents $DIRNAME/$ARCHIVE
