CCPUInfo: split platforms and rework

--- a/xbmc/platform/android/CMakeLists.txt
+++ b/xbmc/platform/android/CMakeLists.txt
@@ -1,3 +1,6 @@
-set(SOURCES MemUtils.cpp)
+set(SOURCES CPUInfoAndroid.cpp
+            MemUtils.cpp)
+
+set(HEADERS CPUInfoAndroid.h)
 
 core_add_library(androidsupport)
