[posix] move common posix files from linux to posix platform
Moves files that are ifdeffed as TARGET_POSIX to platform/posix rather than
platform/linux

--- a/xbmc/platform/posix/CMakeLists.txt
+++ b/xbmc/platform/posix/CMakeLists.txt
@@ -1,7 +1,21 @@
-set(SOURCES Filesystem.cpp
+set(SOURCES ConvUtils.cpp
+            Filesystem.cpp
+            LinuxResourceCounter.cpp
+            LinuxTimezone.cpp
             MessagePrinter.cpp
-            PlatformPosix.cpp)
+            PlatformPosix.cpp
+            XFileUtils.cpp
+            XHandle.cpp
+            XMemUtils.cpp
+            XTimeUtils.cpp)
 
-set(HEADERS PlatformPosix.h)
+set(HEADERS ConvUtils.h
+            LinuxResourceCounter.h
+            LinuxTimezone.h
+            PlatformPosix.h
+            XFileUtils.h
+            XHandle.h
+            XMemUtils.h
+            XTimeUtils.h)
 
 core_add_library(platform_posix)
